# advent-of-code-2022

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: main.rs
src/day1/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/days/: mod.rs
src/days/day1/: mod.rs
src/days/day2/: mod.rs
src/days/day3/: mod.rs
src/days/day4/: mod.rs
src/days/day5/: mod.rs
src/days/day6/: mod.rs
src/days/day7/: mod.rs
src/days/day8/: mod.rs
src/days/day9/: mod.rs
