[package]
name = "advent_of_code_2022"
authors = ["Noel Gallagher <noelgallagher164@gmail.com>"]
description = "Solutions to advent of code 2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false